--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,17 @@
-pipeline {
+pipeline{
     agent any
     stages{
-        stage('Build'){
-            steps {
-                sh 'mvn clean package'
+        stage('build'){
+            steps{
+                echo "Build step :01 starting here"
             }
-            post {
-                success {
-                    echo 'Now Archiving...'
-                    archiveArtifacts artifacts: '**/target/*.war'
-                }
+            steps{
+                echo "Build step :02 staring here"
+            }
+        }
+        stage('Deploy to staging'){
+            steps{
+                echo "Deploy to staging steps starts here"
             }
         }
     }
