--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,13 @@ pipeline {
     stages{
         stage('Build'){
             steps {
-                echo "Starting of buid stage..."
+                sh 'mvn clean package'
+            }
+            post {
+                success {
+                    echo 'Now Archiving...'
+                    archiveArtifacts artifacts: '**/target/*.war'
+                }
             }
         }
     }
