--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages{
         stage('Build'){
             steps {
-                bat 'mvn clean package'
+                sh 'mvn clean package'
             }
             post {
                 success {
@@ -12,9 +12,25 @@ pipeline {
                 }
             }
         }
-        stage('Deploy to staging'){
-            steps{
+        stage ('Deploy to Staging'){
+            steps {
                 build job: 'Deploy-to-staging'
+            }
+        }
+        stage ('Deploy to Production'){
+            steps{
+                timeout(time:5, unit:'DAYS'){
+                    input message: 'Approve PRODUCTION Deployment?'
+                }
+                build job: 'Deploy-to-prod'
+            }
+            post{
+                success{
+                    echo 'Code Deployed to Production'
+                }
+                failure{
+                    echo 'Code Deployement fail'
+                }
             }
         }
     }
