Update dependency job name in jenkinsfile

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         }
         stage ('Deploy to Staging'){
             steps {
-                build job: 'Deploy-to-staging'
+                build job: 'Deploy-to-staging-pipeline'
             }
         }
         stage ('Deploy to Production'){
@@ -22,7 +22,7 @@ pipeline {
                 timeout(time:5, unit:'DAYS'){
                     input message: 'Approve PRODUCTION Deployment?'
                 }
-                build job: 'Deploy-to-prod'
+                build job: 'Deploy-to-prod-pipeline'
             }
             post{
                 success{
