Updated pem file location

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,8 @@ stages{
             parallel{
                 stage ('Deploy to Staging'){
                     steps {
-                        bat "winscp -i /home/jenkins/tomcat-demo.pem **/target/*.war ec2-user@${params.tomcat_dev}:/var/lib/tomcat/webapps"
+                        //bat "winscp -i /home/jenkins/tomcat-demo.pem **/target/*.war ec2-user@${params.tomcat_dev}:/var/lib/tomcat/webapps"
+                        bat "winscp -i C:/Users/sb9ftn/Training/AWS_KeyPair/tomct-jenkins-demo-pl2inpun0134nb-sb9ftn-ssh.pem **/target/*.war ec2-user@${params.tomcat_dev}:/var/lib/tomcat/webapps"
                     }
                 }
 
