Updating pem file path for prod server

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,7 @@ stages{
 
                 stage ("Deploy to Production"){
                     steps {
-                        bat "winscp -i /home/jenkins/tomcat-demo.pem **/target/*.war ec2-user@${params.tomcat_prod}:/var/lib/tomcat/webapps"
+                        bat "winscp -i C:/Users/sb9ftn/Training/AWS_KeyPair/tomct-jenkins-demo-pl2inpun0134nb-sb9ftn-ssh.pem **/target/*.war ec2-user@${params.tomcat_prod}:/var/lib/tomcat/webapps"
                     }
                 }
             }
